[gd_scene load_steps=10 format=2]

[ext_resource path="res://image/GUN SIMULATOR 0.01 (17).png" type="Texture" id=1]
[ext_resource path="res://music/music.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripthome/Home2.gd" type="Script" id=3]
[ext_resource path="res://image/BackroomsHall.png" type="Texture" id=4]
[ext_resource path="res://image/city.png" type="Texture" id=5]
[ext_resource path="res://data/scenes/Score1.gd" type="Script" id=6]
[ext_resource path="res://image/png-transparent-united-states-dollar-money-united-states-one-hundred-dollar-bill-money-saving-bank-cash-removebg-preview.png" type="Texture" id=7]
[ext_resource path="res://data/bonard.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -5.0
margin_bottom = 5.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -3.0
margin_right = 1924.0
margin_bottom = 1080.0
rect_scale = Vector2( 0.780073, 0.746686 )
texture = ExtResource( 1 )
stretch_mode = 1

[node name="Button" type="Button" parent="."]
margin_left = 98.0
margin_top = 291.0
margin_right = 538.0
margin_bottom = 951.0
rect_scale = Vector2( 0.688489, 0.629113 )
icon = ExtResource( 5 )

[node name="Button2" type="Button" parent="."]
margin_left = 439.0
margin_top = 289.0
margin_right = 470.0
margin_bottom = 712.0
rect_scale = Vector2( 9.52849, 0.989114 )

[node name="Button3" type="Button" parent="."]
margin_left = 791.0
margin_top = 287.0
margin_right = 822.0
margin_bottom = 708.0
rect_scale = Vector2( 9.52849, 0.989114 )

[node name="Button4" type="Button" parent="."]
margin_left = 1135.0
margin_top = 288.0
margin_right = 1631.0
margin_bottom = 952.0
rect_scale = Vector2( 0.608491, 0.629113 )
icon = ExtResource( 4 )

[node name="Music" parent="." instance=ExtResource( 2 )]
bus = "Master"

[node name="Button5" type="Button" parent="."]
margin_left = 258.0
margin_top = 27.0
margin_right = 507.0
margin_bottom = 100.0
flat = true

[node name="Button6" type="Button" parent="."]
margin_left = 44.0
margin_top = 30.0
margin_right = 192.0
margin_bottom = 97.0
flat = true

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 1397.0
margin_top = 13.0
margin_right = 2035.0
margin_bottom = 405.0
rect_scale = Vector2( 0.123941, 0.135275 )
texture = ExtResource( 7 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Score" type="Label" parent="Node2D"]
margin_left = 1317.0
margin_top = 10.0
margin_right = 1339.0
margin_bottom = 27.0
rect_scale = Vector2( 2.87121, 3.3086 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
uppercase = true
script = ExtResource( 6 )

[node name="Label2" type="Label" parent="Node2D"]
modulate = Color( 0.027451, 0.027451, 0.027451, 1 )
self_modulate = Color( 0.0666667, 0.0627451, 0.0627451, 1 )
margin_left = 228.0
margin_top = 312.0
margin_right = 255.0
margin_bottom = 326.0
rect_scale = Vector2( 1.9891, 1.57191 )
text = "City"
uppercase = true

[node name="Label3" type="Label" parent="Node2D"]
modulate = Color( 0.0431373, 0.0431373, 0.0431373, 1 )
margin_left = 1239.0
margin_top = 314.0
margin_right = 1322.0
margin_bottom = 328.0
rect_scale = Vector2( 1.43675, 1.67367 )
text = "BACKROOMS"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
