extends Control



func _on_Button_pressed():
	get_tree().change_scene("res://data/scenes/main.tscn")





func _on_Button5_pressed():
	get_tree().change_scene("res://Scripthome/Home3.tscn")


func _on_Button6_pressed():
	get_tree().change_scene("res://Scripthome/Home.tscn")


func _on_Button2_pressed():
	get_tree().change_scene("res://data 1/scenes/main.tscn")


func _on_Button3_pressed():
	get_tree().change_scene("res://data 2/scenes/main.tscn")
